fixed setting dropdown menu in dark mode

--- a/src/css/components/dark_mode.scss
+++ b/src/css/components/dark_mode.scss
@@ -13,6 +13,9 @@
     a {
       @apply text-gray-200;
     }
+    .dropdown > a {
+      @apply text-gray-900;
+    }
   }
 
   .card {
